Changed html formatter