@@ -14,6 +14,11 @@
   <version>0</version>
   <packaging>pom</packaging>
 
+  <properties>
+    <java.version>21</java.version>
+    <spring-cloud.version>2023.0.0</spring-cloud.version>
+  </properties>
+
   <modules>
     <module>admin-core</module>
     <module>admin-app</module>
@@ -36,4 +41,20 @@
     </dependencies>
   </dependencyManagement>
 
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>21</source>
+          <target>21</target>
+          <encoding>UTF-8</encoding>
+          <compilerArgs>
+            <compilerArg>--enable-preview</compilerArg>
+          </compilerArgs>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
